network/haproxy-ingress/haproxy-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    haproxy.org/load-balance: "roundrobin"
spec:
  rules:
  - host: grafana.nthsky.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pf-api-go
#  namespace: staging
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    haproxy.org/load-balance: "roundrobin"
spec:
  rules:
  - host: pf-go.nthsky.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pf-api
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    haproxy.org/load-balance: "roundrobin"
spec:
  rules:
  - host: argocd.nthsky.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-main-0
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "haproxy"
    haproxy.org/load-balance: "roundrobin"
spec:
  rules:
  - host: prom.nthsky.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: promlb
            port:
              number: 9090
